# turing-machine

./: .gitignore  Makefile  config.py  configs.py  main.py  pyproject.toml  scratch.py
files/: turing.json
src/: config.py  file_saver.py  main.py  test.py
src/components/: app.py  file_saver.py  modal.py  widgets.py
src/components/frames/: scrollable_frame.py  xy_frame.py
src/components/modals/: AboutModal.py  AlphabetModal.py  Modal.py  TextModals.py
src/components/turing/: rules.py  tape.py
src/config/: config.py
src/config/colors/: colorsConfig.py
src/config/modals/: modalConfigs.py
src/config/texts/: ErrorTexts.py  texts.py
src/config/types/: configT.py  fileSaverT.py  texts.py
src/custom_types/: configT.py  fileSaverT.py  texts.py
src/turing/: rules.py  tape.py
src/ui/: app.py  config.py  scrollable_frame.py  widgets.py  xy_frame.py
